--- a/Languages/languages.qmd
+++ b/Languages/languages.qmd
@@ -13,4 +13,7 @@ format: html
 | Stata | Proficient |
 | Python | Beginner|
 
-### ...
+### Valerie
+| Programming Language | Level |
+| --- | --- |
+| Python | Advanced |
