--- a/Languages/languages.qmd
+++ b/Languages/languages.qmd
@@ -13,4 +13,8 @@ format: html
 | Stata | Proficient |
 | Python | Beginner|
 
-### ...
+### Till
+| Programming Language | Level |
+| --- | --- |
+| R/RStudio | Proficient |
+| SPSS/PSPP | Proficient |
