--- a/Languages/languages.qmd
+++ b/Languages/languages.qmd
@@ -13,4 +13,8 @@ format: html
 | Stata | Proficient |
 | Python | Beginner|
 
-### ...
+### Fabienne
+| Programming Language | Level |
+| --- | --- |
+| R | Proficient |
+| Python | Beginner|
