--- a/Languages/languages.qmd
+++ b/Languages/languages.qmd
@@ -18,3 +18,8 @@ format: html
 | --- | --- |
 | R | Proficient |
 | Python | Beginner|
+
+### Iva
+| Programming Language | Level |
+| --- | --- |
+| R | Proficient |
