--- a/Languages/languages.qmd
+++ b/Languages/languages.qmd
@@ -23,5 +23,12 @@ format: html
 | SPSS | Proficient|
 | Python | Beginner|
 
- 
+### Dino
+| Programming Language | Level |
+| --- | --- |
+| R | Proficient |
+| Python | Beginner|
+=======
+### ...
+
 
