--- a/Languages/languages.qmd
+++ b/Languages/languages.qmd
@@ -32,6 +32,12 @@ format: html
 | --- | --- |
 | R | Proficient |
 | Python | Beginner|
+
+### Iva
+| Programming Language | Level |
+| --- | --- |
+| R | Proficient |
+
 =======
 ### ...
 
